# gppo

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: classroom.yml
conf/: config.yaml
conf/agent/: ddqn.yaml  ddqndueling.yaml  dqn.yaml  dqv.yaml  dqvmax.yaml  gppo.yaml  gppo2.yaml  gppo_Ant-v5.yaml  gppo_HalfCheetah-v5.yaml  gppo_Hopper-v5.yaml  gppo_Humanoid-v5.yaml  gppo_Walker2d-v5.yaml  gppo_walker2d.yaml  gppo_walker2dold.yaml  gpreinforce.yaml  ppo.yaml  ppo_walker2d.yaml  random.yaml  reinforce.yaml  sb_ppo.yaml  sb_ppo_Ant-v5.yaml  sb_ppo_HalfCheetah-v5.yaml  sb_ppo_Hopper-v5.yaml  sb_ppo_Humanoid-v5.yaml  sb_ppo_Walker2d-v5.yaml
conf/mode/: eval.yaml  hpo.yaml  hpo_gppo.yaml  train.yaml
gppo/: main.py
gppo/agents/: agentfactory.py  gppoagent.py  onpolicyagent.py
gppo/gp/: deepgp.py  deepgplayers.py  deepsigma.py  fitgp.py  gpbase.py
gppo/hyperparam_tuning/: helperfunctions.py  helperfunctionsOLD.py
gppo/simulation/: simulator_rl.py
gppo/util/: eval.py  vecnormalize.py  wandblogger.py
scripts/: mujoco_exp.sh  mujoco_hypopt.sh
src/: agent.py  main.py  network.py  obs_norm_stats.pkl  ppo_sb.py  vec_normalize.pkl
src/agents/: agent.py  agentfactory.py  ddqnagent.py  dqnagent.py  dqvagent.py  dqvmaxagent.py  gppo.py  gppoagent.py  gpreinforceagent.py  grpoagent.py  offpolicyagent.py  onpolicyagent.py  ppoagent.py  randomagent.py  reinforceagent.py  sbadapter.py
src/gp/: acdeepsigma.py  actorcriticdgp.py  deepgp.py  deepgplayers.py  deepsigma.py  duelgp.ipynb  fitgp.py
src/gppo/: main.py
src/metrics/: dump.txt  (+3 more)
(+77 files in other folders)
